feat: 優化 AnalyzerUtil